# C-codes_laptopUpdates

./: 1760. Minimum Limit of Balls in a Bag  1792. Maximum Average Pass Ratio_ANSWER  1930. Unique Length-3 Palindromic Subsequences  2054. Two Best Non-Overlapping Events  2337. Move Pieces to Obtain a String  2337.Move Piece to Obtain a String_Answer  2337.Move Piece to Obtain a String_Answer.cpp  CMakeLists.txt  Max_number_i3870  Star Pyramid  print_something
C++ (personal_works)/: helper.cpp  Сколько цифр необходимо преобрести относительно количества кабинетов.cpp
C++ (personal_works)/Calculator Versions/: University Grading System.cpp
LeetCode/: 1462. Course Schedule IV.cpp  2460. Apply Operations to an Array.cpp  3160. Find the Number of Distinct Colors Among the Balls.cpp  889. Construct Binary Tree from Preorder and Postorder Traversal.cpp  Median of Two Sorted Arrays (Задание 4).cpp  Sum of Numbers(Задание 1 ОТВЕТ).cpp
